<resources>
    <string name="app_name">AtosZadatak15</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="status">status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">Task name</string>
    <string name="task_description">Task description</string>
    <string name="task_type">Task type</string>
    <string name="task_status">Task status</string>
    <string name="task_start_date">Task start date</string>
    <string name="save_task">Save task</string>
    <string name="task_complexity">Task complexity</string>
    <string name="task_end_date">Task end date</string>
    <string name="time_spent">Time spent</string>
    <string name="time_started">Time started</string>
    <string name="time_ended">Time ended</string>
    <string name="worker_name">Worker name</string>
    <string name="worker_surname">Worker surname</string>
    <string name="work_position">Work position</string>
    <string name="save_worker">Save worker</string>
    <string name="surname">Surname</string>
    <string name="worker_oib">Worker OIB</string>
    <string name="enter_username">Enter username</string>
    <string name="go_to_workers">Go to workers</string>
    <string name="go_to_tasks">Go to tasks</string>
</resources>