<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/task_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="2dp"
    app:cardCornerRadius="2dp"
    android:clickable="true">


    <RelativeLayout
        android:id="@+id/lin_layout_item_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_toStartOf="@+id/tv_status"
            android:layout_alignParentStart="true"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_below="@+id/tv_name"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/description"
            />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_alignParentEnd="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/status"
            />







    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>